--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,7 @@
   "inlineChat.accessibleDiffView": "off",
   "terminal.integrated.initialHint": false,
   "cSpell.words": [
-    "Parra"
+    "Parra",
+    "Riobamba"
   ]
 }
